# device-monitor

./: .gitignore  Android.mk  COPYING  Makefile.am  README.md  config-lua.c  config-xml.c  config.xml  configuration.c  configuration.h  configure  configure.ac  crypto-gcrypt.c  crypto-internal.h  crypto-openssl.c  crypto-private.h  crypto.c  crypto.h  dummy-challenge.c  fsroot-config.c  fsroot-config.h  fsroot-crypto.c  fsroot-crypto.h  fsroot-db.c  fsroot-db.h  fsroot-internal.h  fsroot-path.c  fsroot-path.h  fsroot-return-codes.h  fsroot.c  fsroot.h  fuse-main.c  fuse.c  hash.c  libtool  list.c  list.h  log.c  log.h  manifest.xml  (+3 more)
chall/: Makefile.am  base64.c  base64.h  chall.c  config-lua.c  config-xml.c  configuration.h  crypto-algo.c  crypto-gcrypt.c  crypto-internal.h  crypto-openssl.c  crypto-private.h  crypto.c  crypto.h  formatter-xml.c  formatter-xml.h  formatter.h
docs/: Makefile.am  device-monitor.doxy.in
linux/: Makefile.am  altchall.c  dummy-challenge-2.c  fsroot-db.h  fsroot.c  fuse-main.c  gpschall10.c  hash.h  velchall.c
tests/: Makefile.am  test_fsroot_chmod_chown  test_fsroot_chmod_chown.c  test_fsroot_create  test_fsroot_create.c  test_fsroot_delete.c  test_fsroot_getattr  test_fsroot_getattr.c  test_fsroot_mkdir  test_fsroot_mkdir.c  test_fsroot_path_basename  test_fsroot_path_basename.c  test_fsroot_path_traversal  test_fsroot_path_traversal.c  test_fsroot_persistence  test_fsroot_persistence.c  test_fsroot_readdir  test_fsroot_readdir.c  test_fsroot_rename  test_fsroot_rename.c  test_fsroot_root_path  test_fsroot_root_path.c  test_fsroot_symlink  test_fsroot_symlink.c
